--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,17 +16,20 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install required packages
+      - name: Install dependencies
         run: |
-          Rscript -e 'install.packages(c("xml2", "dplyr", "readr", "lubridate"))'
+          install.packages(c("xml2", "dplyr", "readr", "lubridate"))
 
       - name: Run ECB scraping script
         run: Rscript R/scrape_ecb.R
 
-      - name: Commit and push updated data
+      - name: Commit and push if data changed
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git add data/recent.csv
-          git diff --cached --quiet || git commit -m "chore: Update recent.csv with latest ECB data"
-          git push
+          git commit -m "chore: Update recent.csv with latest ECB data" || echo "No changes to commit"
+          git push origin HEAD:${{ github.ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
