--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -11,25 +11,24 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install dependencies
+      - name: Install required R packages
         run: |
-          install.packages(c("xml2", "dplyr", "readr", "lubridate"))
+          Rscript -e 'install.packages(c("xml2", "dplyr", "readr", "lubridate"))'
 
-      - name: Run ECB scraping script
+      - name: Run scraper
         run: Rscript R/scrape_ecb.R
 
-      - name: Commit and push if data changed
+      - name: Commit and push changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git add data/recent.csv
           git commit -m "chore: Update recent.csv with latest ECB data" || echo "No changes to commit"
-          git push origin HEAD:${{ github.ref }}
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
