ci: Skip commit if no changes

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -34,5 +34,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add report/index.html
-          git commit -m "ci: Render dashboard HTML from report.Rmd"
+          git diff --cached --quiet || git commit -m "ci: Render dashboard HTML from report.Rmd"
           git push
