--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -27,16 +27,10 @@ jobs:
         run: |
           Rscript -e 'install.packages(c(
             "rmarkdown",
-            "tidyverse",
-            "lubridate",
-            "forecast",
-            "xgboost",
-            "zoo",
-            "lmtest",
-            "igraph",
-            "ggraph"
-          ), repos = "https://cloud.r-project.org")'
-          Rscript -e 'try(install.packages("prophet", repos = "https://cloud.r-project.org"))'
+            "ggplot2", "dplyr", "tidyr", "readr", "stringr", "tibble", "forcats",
+            "lubridate", "forecast", "xgboost",
+            "zoo", "lmtest", "igraph", "ggraph", "prophet"
+          ), dependencies = TRUE, repos = "https://cloud.r-project.org")'
 
       - name: Render RMarkdown to HTML
         run: Rscript R/render_report.R
