--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -18,19 +18,40 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install Pandoc
+      - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc
+          sudo apt-get install -y \
+            pandoc \
+            libcurl4-openssl-dev \
+            libssl-dev \
+            libxml2-dev \
+            libv8-dev \
+            libfontconfig1-dev \
+            libharfbuzz-dev \
+            libfribidi-dev \
+            libfreetype6-dev \
+            libpng-dev \
+            libtiff5-dev \
+            libjpeg-dev \
+            libglpk-dev \
+            libgdal-dev \
+            libgeos-dev \
+            libproj-dev \
+            libudunits2-dev \
+            libharfbuzz-dev \
+            libfontconfig1-dev
 
       - name: Install R packages
         run: |
           Rscript -e 'install.packages(c(
-            "rmarkdown",
-            "ggplot2", "dplyr", "tidyr", "readr", "stringr", "tibble", "forcats",
-            "lubridate", "forecast", "xgboost",
-            "zoo", "lmtest", "igraph", "ggraph", "prophet"
+            "rmarkdown", "ggplot2", "dplyr", "tidyr", "readr", "stringr", "tibble", "forcats",
+            "lubridate", "forecast", "xgboost", "zoo", "lmtest", "igraph", "ggraph",
+            "TTR", "curl", "httr", "quantmod", "tseries", "ggforce", "gganimate",
+            "sf", "units", "transformr", "rsconnect", "covr", "gt",
+            "juicyjuice", "katex", "V8", "systemfonts"
           ), dependencies = TRUE, repos = "https://cloud.r-project.org")'
+          Rscript -e 'try(install.packages("prophet", repos = "https://cloud.r-project.org"))'
 
       - name: Render RMarkdown to HTML
         run: Rscript R/render_report.R
