--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -42,6 +42,14 @@ jobs:
             libharfbuzz-dev \
             libfontconfig1-dev
 
+      - name: Cache R packages
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: r-${{ runner.os }}-${{ hashFiles('**/DESCRIPTION') }}
+          restore-keys: |
+            r-${{ runner.os }}-
+            
       - name: Install R packages
         run: |
           Rscript -e 'install.packages(c(
