--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
@@ -38,18 +40,8 @@ jobs:
             libgdal-dev \
             libgeos-dev \
             libproj-dev \
-            libudunits2-dev \
-            libharfbuzz-dev \
-            libfontconfig1-dev
+            libudunits2-dev
 
-      - name: Cache R packages
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: r-${{ runner.os }}-${{ hashFiles('**/DESCRIPTION') }}
-          restore-keys: |
-            r-${{ runner.os }}-
-            
       - name: Install R packages
         run: |
           Rscript -e 'install.packages(c(
@@ -61,10 +53,22 @@ jobs:
           ), dependencies = TRUE, repos = "https://cloud.r-project.org")'
           Rscript -e 'try(install.packages("prophet", repos = "https://cloud.r-project.org"))'
 
+      - name: Check for data changes
+        id: data-check
+        run: |
+          git fetch origin main
+          if git diff --quiet origin/main -- data; then
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Render RMarkdown to HTML
+        if: steps.data-check.outputs.changed == 'true'
         run: Rscript R/render_report.R
 
       - name: Commit rendered HTML
+        if: steps.data-check.outputs.changed == 'true'
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
