--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -14,13 +14,21 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+
+      - name: Check for data changes
+        id: data_check
+        run: |
+          if git diff --quiet origin/main -- data/history.csv data/recent.csv; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
 
       - name: Set up R
+        if: steps.data_check.outputs.skip == 'false'
         uses: r-lib/actions/setup-r@v2
 
       - name: Install system dependencies
+        if: steps.data_check.outputs.skip == 'false'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -42,7 +50,16 @@ jobs:
             libproj-dev \
             libudunits2-dev
 
+      - name: Restore R package cache
+        if: steps.data_check.outputs.skip == 'false'
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: r-packages-${{ runner.os }}-${{ hashFiles('**/DESCRIPTION') }}
+          restore-keys: r-packages-${{ runner.os }}-
+
       - name: Install R packages
+        if: steps.data_check.outputs.skip == 'false'
         run: |
           Rscript -e 'install.packages(c(
             "rmarkdown", "ggplot2", "dplyr", "tidyr", "readr", "stringr", "tibble", "forcats",
@@ -53,22 +70,12 @@ jobs:
           ), dependencies = TRUE, repos = "https://cloud.r-project.org")'
           Rscript -e 'try(install.packages("prophet", repos = "https://cloud.r-project.org"))'
 
-      - name: Check for data changes
-        id: data-check
-        run: |
-          git fetch origin main
-          if git diff --quiet origin/main -- data; then
-            echo "changed=false" >> "$GITHUB_OUTPUT"
-          else
-            echo "changed=true" >> "$GITHUB_OUTPUT"
-          fi
-
       - name: Render RMarkdown to HTML
-        if: steps.data-check.outputs.changed == 'true'
+        if: steps.data_check.outputs.skip == 'false'
         run: Rscript R/render_report.R
 
       - name: Commit rendered HTML
-        if: steps.data-check.outputs.changed == 'true'
+        if: steps.data_check.outputs.skip == 'false'
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
