--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -28,7 +28,11 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add data/recent.csv
-          git commit -m "chore: Update recent.csv with latest ECB data" || echo "No changes to commit"
-          git push
+          if git diff --cached --quiet; then
+            echo "No changes to recent.csv"
+          else
+            git commit -m "chore: Update recent.csv with latest ECB data"
+            git push
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
